Refactor: Global regex rename of memory operations to match new ForeignMemory APIs